fix(scrollbar): update scrollbar style

--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,17 @@ body {
 video::-webkit-media-controls-fullscreen-button {
   display: none !important;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px #0a1e2d;
+  background: #0a1e2d;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ebdfca;
+  border-radius: 4px;
+}
